<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tokyproduction.volleystats.newTeam"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/tfTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"

        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/name_des_teams"
        android:inputType="text|textPersonName"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/lvPlayers"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="70dp" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/speichern"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSave"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignLeft="@+id/tfTeamName"
        android:layout_alignStart="@+id/tfTeamName"
        android:text="@string/addPlayer" />

</RelativeLayout>
